# BlockChainRust

./: Cargo.toml
block_chain.db/: db  snap.0000000000000428  snap.0000000000000BE3  snap.0000000000000BF7  snap.0000000000000BFD  snap.0000000000001106
block_chain_db/: db  snap.000000000000085A  snap.00000000000012F4
src/: block.rs  block_chain.rs  command.rs  consensus.rs  lib.rs  main.rs  transaction.rs  utils.rs  utxo.rs  wallet.rs
